manifests/bootstrapping-cloud/08-argocd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: argo-cd
  name: argo-cd
