manifests/bootstrapping-cloud/08-argocd/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-public
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.cloud.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  type: ExternalName
  externalName: cloud.danmanners.com
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  sessionAffinity: None
